feat: add Drizzle ORM with PostgreSQL as the dialect

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,7 +12,8 @@
       "@middlewares/*": ["middlewares/*"],
       "@config/*": ["config/*"],
       "@utils/*": ["utils/*"],
-      "@types/*": ["types/*"]
+      "@types/*": ["types/*"],
+      "@db/*": ["db/*"]
     },
 
     // Environment Settings
